Fix JPQL LIMIT usage: use Pageable/derived queries for compatibility; update services